fixed dropdown so it covers button

--- a/src/styles/topics.module.css
+++ b/src/styles/topics.module.css
@@ -2,8 +2,6 @@
   width: 400px;
   color: black;
   position: relative;
-  z-index: 9999999999;
-  transition: height 1s ease;
 }
 
 .multiselect:hover {
